// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders active 1`] = `
<span
  className="KategorieFilter Bootstrap-buttons--active"
>
  <Button
    active={true}
    block={false}
    bsClass="btn"
    bsStyle="default"
    className="KategorieFilter--pěší--active"
    disabled={false}
    onClick={[MockFunction]}
  >
    <PopisekKategorie
      heightPercentage={100}
      showTyp={true}
      showZkratka={false}
      typ="pěší"
      typAsText={false}
    />
  </Button>
</span>
`;

exports[`renders nonactive 1`] = `
<span
  className="KategorieFilter Bootstrap-buttons--active"
>
  <Button
    active={false}
    block={false}
    bsClass="btn"
    bsStyle="default"
    className="KategorieFilter--koloběžka--inactive"
    disabled={false}
    onClick={[MockFunction]}
  >
    <PopisekKategorie
      heightPercentage={100}
      showTyp={true}
      showZkratka={false}
      typ="koloběžka"
      typAsText={false}
    />
  </Button>
</span>
`;
